// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CheckoutForm functionality tests CheckoutForm - cart empty - test 1`] = `
<div>
  <form
    class="space-y-6"
    data-testid="checkout-form"
  >
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Zahlungsinformationen
      </h3>
      <p
        class="text-sm text-slate-600"
      >
        Sie werden zu Stripe weitergeleitet, um Ihre Zahlung sicher abzuschließen.
      </p>
    </div>
    <div
      class="border-t pt-4"
    >
      <div
        data-slot="form-item"
      >
        <button
          aria-checked="false"
          aria-describedby="_r_0_-form-item-description"
          aria-invalid="false"
          data-slot="form-control"
          data-state="unchecked"
          data-testid="terms-checkbox"
          id="_r_0_-form-item"
          role="checkbox"
          type="button"
          value="on"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="grid place-content-center text-current transition-none"
              data-slot="checkbox-indicator"
              data-state="unchecked"
              style="pointer-events: none;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </span>
          </div>
        </button>
        <input
          aria-hidden="true"
          style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
        <div
          class="space-y-1 leading-none"
        >
          <label
            data-error="false"
            data-slot="form-label"
            for="_r_0_-form-item"
          >
            Ich stimme den Allgemeinen Geschäftsbedingungen zu
          </label>
        </div>
      </div>
    </div>
    <button
      data-slot="button"
      data-testid="proceed-to-payment-btn"
      disabled=""
      type="submit"
    >
      Zur Zahlung
    </button>
  </form>
</div>
`;

exports[`CheckoutForm functionality tests CheckoutForm - cart with items - test 1`] = `
<div>
  <form
    class="space-y-6"
    data-testid="checkout-form"
  >
    <div
      class="space-y-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Zahlungsinformationen
      </h3>
      <p
        class="text-sm text-slate-600"
      >
        Sie werden zu Stripe weitergeleitet, um Ihre Zahlung sicher abzuschließen.
      </p>
    </div>
    <div
      class="border-t pt-4"
    >
      <div
        data-slot="form-item"
      >
        <button
          aria-checked="false"
          aria-describedby="_r_1_-form-item-description"
          aria-invalid="false"
          data-slot="form-control"
          data-state="unchecked"
          data-testid="terms-checkbox"
          id="_r_1_-form-item"
          role="checkbox"
          type="button"
          value="on"
        >
          <div
            data-testid="mock-react-presence"
          >
            <span
              class="grid place-content-center text-current transition-none"
              data-slot="checkbox-indicator"
              data-state="unchecked"
              style="pointer-events: none;"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-check size-3.5"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 6 9 17l-5-5"
                />
              </svg>
            </span>
          </div>
        </button>
        <input
          aria-hidden="true"
          style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
        <div
          class="space-y-1 leading-none"
        >
          <label
            data-error="false"
            data-slot="form-label"
            for="_r_1_-form-item"
          >
            Ich stimme den Allgemeinen Geschäftsbedingungen zu
          </label>
        </div>
      </div>
    </div>
    <button
      data-slot="button"
      data-testid="proceed-to-payment-btn"
      type="submit"
    >
      Zur Zahlung
    </button>
  </form>
</div>
`;
